# superego

./: .env  .gitignore  Cargo.toml  README.md
server/: .env.example  Cargo.toml  Dockerfile  gen_models.sh
server/migration/: Cargo.toml
server/migration/src/: m20220101_000001_create_table.rs
server/prisma/: schema.prisma
server/prisma/migrations/20231211121957_first/: migration.sql
server/prisma/migrations/20231212123750_first/: migration.sql
server/src/: error.rs  main.rs
server/src/entities/: credential.rs  mod.rs  prelude.rs  service.rs  session.rs  user.rs
server/src/functions/: bootstrap.rs  jwt.rs  mod.rs  session.rs
server/src/routes/: login.rs  mod.rs  refresh.rs  register.rs
tools/prisma-cli/: Cargo.toml
web/: package.json
web/src/components/: login-form.tsx
web/src/components/ui/: input.tsx
web/src/pages/: login.tsx
