[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
sha3 = "0.10.8"
base64 = "0.21.5"
getrandom = "0.2.11"
log = "0.4.20"

rocket = { version = "=0.5.0-rc.4", features = ["json"] }
bcrypt = "0.15.0"
hcaptcha = "2.2.2"
mail = "0.7.0"
jsonwebtoken = "9.2.0"
didkit = "0.6.0"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.10"
default-features = false
features = ["postgresql"]
